Volvi a agregar las clases que github me borro pero por alguna razon no se guardan en github

--- a/a01166322MainGraficas/a01166322MainGraficas.vcxproj
+++ b/a01166322MainGraficas/a01166322MainGraficas.vcxproj
@@ -117,11 +117,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Employee.cpp" />
     <ClCompile Include="InputFile.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Employee.h" />
     <ClInclude Include="InputFile.h" />
+    <ClInclude Include="Rectangle.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Prueba.txt" />
