--- a/a01166322MainGraficas/a01166322MainGraficas.vcxproj
+++ b/a01166322MainGraficas/a01166322MainGraficas.vcxproj
@@ -130,6 +130,10 @@
   <ItemGroup>
     <Text Include="Prueba.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Default.frag" />
+    <None Include="Default.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
