Tarea Clases Mesh. Shader y ShaderProgram incompleta (mi sourcetree sigue sin subir mis clases profe)

--- a/a01166322MainGraficas/a01166322MainGraficas.vcxproj
+++ b/a01166322MainGraficas/a01166322MainGraficas.vcxproj
@@ -120,12 +120,16 @@
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="InputFile.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Circle.h" />
     <ClInclude Include="InputFile.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="Shader.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Prueba.txt" />
